feat: partial commit